--- a/style.css
+++ b/style.css
@@ -23,5 +23,8 @@
 }
 
 .photos{
-  @apply  max-h-fit max-w-fit p-3 bg-cover bg-center hover:shadow-xl border border-gray-200 object-cover transition duration-300 transform hover:scale-105
+  @apply   p-3 bg-cover bg-center hover:shadow-xl border border-gray-200 object-cover transition duration-300 transform hover:scale-105
+}
+.section-p1{
+  @apply p-3 px-3 lg:px-16
 }
