--- a/output.css
+++ b/output.css
@@ -564,10 +564,6 @@ video {
   pointer-events: none;
 }
 
-.pointer-events-auto{
-  pointer-events: auto;
-}
-
 .fixed{
   position: fixed;
 }
@@ -589,6 +585,10 @@ video {
   bottom: 0px;
 }
 
+.left-0{
+  left: 0px;
+}
+
 .right-0{
   right: 0px;
 }
@@ -597,16 +597,12 @@ video {
   top: 0px;
 }
 
-.left-0{
-  left: 0px;
+.z-0{
+  z-index: 0;
 }
 
 .z-10{
   z-index: 10;
-}
-
-.z-0{
-  z-index: 0;
 }
 
 .col-span-2{
@@ -630,6 +626,11 @@ video {
   margin-right: 1.25rem;
 }
 
+.my-3{
+  margin-top: 0.75rem;
+  margin-bottom: 0.75rem;
+}
+
 .my-6{
   margin-top: 1.5rem;
   margin-bottom: 1.5rem;
@@ -638,8 +639,6 @@ video {
 .my-8{
   margin-top: 2rem;
   margin-bottom: 2rem;
-}
-
 }
 
 .mb-10{
@@ -652,6 +651,18 @@ video {
 
 .ml-0{
   margin-left: 0px;
+}
+
+.ml-14{
+  margin-left: 3.5rem;
+}
+
+.ml-8{
+  margin-left: 2rem;
+}
+
+.mr-14{
+  margin-right: 3.5rem;
 }
 
 .mt-1{
@@ -670,6 +681,10 @@ video {
   margin-top: 0.75rem;
 }
 
+.mt-4{
+  margin-top: 1rem;
+}
+
 .mt-5{
   margin-top: 1.25rem;
 }
@@ -680,8 +695,6 @@ video {
 
 .mt-8{
   margin-top: 2rem;
-}
-
 }
 
 .block{
@@ -732,10 +745,16 @@ video {
   height: 1px;
 }
 
+.h-\[70vh\]{
+  height: 70vh;
 }
 
 .max-h-12{
   max-height: 3rem;
+}
+
+.max-h-20{
+  max-height: 5rem;
 }
 
 .max-h-32{
@@ -750,49 +769,9 @@ video {
   max-height: 15rem;
 }
 
-.max-h-10{
-  max-height: 2.5rem;
-}
-
 .max-h-fit{
   max-height: -moz-fit-content;
   max-height: fit-content;
-}
-
-.max-h-1{
-  max-height: 0.25rem;
-}
-
-.max-h-16{
-  max-height: 4rem;
-}
-
-.max-h-3{
-  max-height: 0.75rem;
-}
-
-.max-h-3\.5{
-  max-height: 0.875rem;
-}
-
-.max-h-80{
-  max-height: 20rem;
-}
-
-.max-h-0{
-  max-height: 0px;
-}
-
-.max-h-56{
-  max-height: 14rem;
-}
-
-.max-h-40{
-  max-height: 10rem;
-}
-
-.max-h-20{
-  max-height: 5rem;
 }
 
 .min-h-40{
@@ -819,45 +798,13 @@ video {
   width: 15rem;
 }
 
-.w-full{
-  width: 100%;
-}
-
-.w-64{
-  width: 16rem;
-}
-
-.w-4{
-  width: 1rem;
-}
-
-.w-1{
-  width: 0.25rem;
-}
-
-.w-5{
-  width: 1.25rem;
-}
-
-.w-5\/6{
-  width: 83.333333%;
-}
-
-.w-1\/6{
-  width: 16.666667%;
-}
-
-.w-2\/6{
-  width: 33.333333%;
-}
-
-.w-7{
-  width: 1.75rem;
-}
-
 .w-fit{
   width: -moz-fit-content;
   width: fit-content;
+}
+
+.w-full{
+  width: 100%;
 }
 
 .min-w-28{
@@ -866,6 +813,10 @@ video {
 
 .max-w-12{
   max-width: 3rem;
+}
+
+.max-w-28{
+  max-width: 7rem;
 }
 
 .max-w-32{
@@ -889,28 +840,8 @@ video {
   max-width: 32rem;
 }
 
-.max-w-3{
-  max-width: 0.75rem;
-}
-
-.max-w-3xl{
-  max-width: 48rem;
-}
-
-.max-w-2{
-  max-width: 0.5rem;
-}
-
-.max-w-28{
-  max-width: 7rem;
-}
-
 .flex-1{
   flex: 1 1 0%;
-}
-
-.flex-auto{
-  flex: 1 1 auto;
 }
 
 .transform{
@@ -999,10 +930,6 @@ video {
   gap: 1.25rem;
 }
 
-.gap-10{
-  gap: 2.5rem;
-}
-
 .space-x-4 > :not([hidden]) ~ :not([hidden]){
   --tw-space-x-reverse: 0;
   margin-right: calc(1rem * var(--tw-space-x-reverse));
@@ -1015,30 +942,16 @@ video {
   margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
 }
 
-.space-x-2 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-x-reverse: 0;
-  margin-right: calc(0.5rem * var(--tw-space-x-reverse));
-  margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
-}
-
-.space-x-20 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-x-reverse: 0;
-  margin-right: calc(5rem * var(--tw-space-x-reverse));
-  margin-left: calc(5rem * calc(1 - var(--tw-space-x-reverse)));
-}
-
-.space-x-72 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-x-reverse: 0;
-  margin-right: calc(18rem * var(--tw-space-x-reverse));
-  margin-left: calc(18rem * calc(1 - var(--tw-space-x-reverse)));
-}
-
 .overflow-hidden{
   overflow: hidden;
 }
 
 .text-pretty{
   text-wrap: pretty;
+}
+
+.rounded{
+  border-radius: 0.25rem;
 }
 
 .rounded-full{
@@ -1057,10 +970,6 @@ video {
   border-radius: 0.75rem;
 }
 
-.rounded-sm{
-  border-radius: 0.125rem;
-}
-
 .border{
   border-width: 1px;
 }
@@ -1071,14 +980,6 @@ video {
 
 .border-2{
   border-width: 2px;
-}
-
-.border-r{
-  border-right-width: 1px;
-}
-
-.border-r-2{
-  border-right-width: 2px;
 }
 
 .border-solid{
@@ -1095,23 +996,13 @@ video {
   border-color: rgb(156 163 175 / var(--tw-border-opacity));
 }
 
-.border-transparent{
-  border-color: transparent;
-}
-
-.border-orange-300{
-  --tw-border-opacity: 1;
-  border-color: rgb(253 186 116 / var(--tw-border-opacity));
-}
-
-.border-orange-500{
-  --tw-border-opacity: 1;
-  border-color: rgb(249 115 22 / var(--tw-border-opacity));
-}
-
 .border-logo_blue{
   --tw-border-opacity: 1;
   border-color: rgb(1 157 230 / var(--tw-border-opacity));
+}
+
+.border-transparent{
+  border-color: transparent;
 }
 
 .bg-black{
@@ -1139,6 +1030,11 @@ video {
   background-color: rgb(241 243 244 / var(--tw-bg-opacity));
 }
 
+.bg-gray-100{
+  --tw-bg-opacity: 1;
+  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
+}
+
 .bg-gray-300{
   --tw-bg-opacity: 1;
   background-color: rgb(209 213 219 / var(--tw-bg-opacity));
@@ -1147,6 +1043,11 @@ video {
 .bg-gray-400{
   --tw-bg-opacity: 1;
   background-color: rgb(156 163 175 / var(--tw-bg-opacity));
+}
+
+.bg-gray-800{
+  --tw-bg-opacity: 1;
+  background-color: rgb(31 41 55 / var(--tw-bg-opacity));
 }
 
 .bg-green-600{
@@ -1182,26 +1083,6 @@ video {
 .bg-yellow-400{
   --tw-bg-opacity: 1;
   background-color: rgb(250 204 21 / var(--tw-bg-opacity));
-}
-
-.bg-blue-800{
-  --tw-bg-opacity: 1;
-  background-color: rgb(30 64 175 / var(--tw-bg-opacity));
-}
-
-.bg-gray-600{
-  --tw-bg-opacity: 1;
-  background-color: rgb(75 85 99 / var(--tw-bg-opacity));
-}
-
-.bg-gray-800{
-  --tw-bg-opacity: 1;
-  background-color: rgb(31 41 55 / var(--tw-bg-opacity));
-}
-
-.bg-gray-100{
-  --tw-bg-opacity: 1;
-  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 }
 
 .bg-opacity-40{
@@ -1253,10 +1134,6 @@ video {
   padding: 2rem;
 }
 
-.p-10{
-  padding: 2.5rem;
-}
-
 .px-10{
   padding-left: 2.5rem;
   padding-right: 2.5rem;
@@ -1275,6 +1152,11 @@ video {
 .px-3{
   padding-left: 0.75rem;
   padding-right: 0.75rem;
+}
+
+.px-36{
+  padding-left: 9rem;
+  padding-right: 9rem;
 }
 
 .px-4{
@@ -1307,8 +1189,6 @@ video {
   padding-bottom: 1rem;
 }
 
-}
-
 .pb-0{
   padding-bottom: 0px;
 }
@@ -1321,12 +1201,20 @@ video {
   padding-bottom: 1.25rem;
 }
 
+.pl-10{
+  padding-left: 2.5rem;
+}
+
 .pl-16{
   padding-left: 4rem;
 }
 
 .pl-2{
   padding-left: 0.5rem;
+}
+
+.pl-3{
+  padding-left: 0.75rem;
 }
 
 .pl-5{
@@ -1337,6 +1225,14 @@ video {
   padding-right: 2.5rem;
 }
 
+.pr-3{
+  padding-right: 0.75rem;
+}
+
+.pr-4{
+  padding-right: 1rem;
+}
+
 .pt-2{
   padding-top: 0.5rem;
 }
@@ -1345,20 +1241,12 @@ video {
   padding-top: 1.25rem;
 }
 
-.pl-10{
-  padding-left: 2.5rem;
-}
-
 .text-center{
   text-align: center;
 }
 
 .text-justify{
   text-align: justify;
-}
-
-.text-start{
-  text-align: start;
 }
 
 .font-Title{
@@ -1433,10 +1321,6 @@ video {
   font-weight: 600;
 }
 
-.font-light{
-  font-weight: 300;
-}
-
 .italic{
   font-style: italic;
 }
@@ -1453,6 +1337,11 @@ video {
 .text-gray-200{
   --tw-text-opacity: 1;
   color: rgb(229 231 235 / var(--tw-text-opacity));
+}
+
+.text-gray-500{
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity));
 }
 
 .text-gray-600{
@@ -1480,11 +1369,6 @@ video {
   color: rgb(1 157 230 / var(--tw-text-opacity));
 }
 
-.text-orange-600{
-  --tw-text-opacity: 1;
-  color: rgb(234 88 12 / var(--tw-text-opacity));
-}
-
 .text-slate-400{
   --tw-text-opacity: 1;
   color: rgb(148 163 184 / var(--tw-text-opacity));
@@ -1500,47 +1384,16 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.text-gray-500{
-  --tw-text-opacity: 1;
-  color: rgb(107 114 128 / var(--tw-text-opacity));
-}
-
-.text-cyan-500{
-  --tw-text-opacity: 1;
-  color: rgb(6 182 212 / var(--tw-text-opacity));
-}
-
-.text-orange-500{
-  --tw-text-opacity: 1;
-  color: rgb(249 115 22 / var(--tw-text-opacity));
-}
-
 .opacity-0{
   opacity: 0;
-}
-
-.opacity-85{
-  opacity: 0.85;
-}
-
-.opacity-50{
-  opacity: 0.5;
 }
 
 .opacity-80{
   opacity: 0.8;
 }
 
-.opacity-60{
-  opacity: 0.6;
-}
-
-.opacity-70{
-  opacity: 0.7;
-}
-
-.opacity-90{
-  opacity: 0.9;
+.opacity-85{
+  opacity: 0.85;
 }
 
 .shadow-sm{
@@ -1672,12 +1525,6 @@ video {
   }
 }
 
-.hover\:scale-105:hover{
-  --tw-scale-x: 1.05;
-  --tw-scale-y: 1.05;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
 .hover\:border-gray-400:hover{
   --tw-border-opacity: 1;
   border-color: rgb(156 163 175 / var(--tw-border-opacity));
@@ -1750,10 +1597,6 @@ video {
   opacity: 0.9;
 }
 
-.hover\:opacity-100:hover{
-  opacity: 1;
-}
-
 .hover\:shadow-xl:hover{
   --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
@@ -1780,14 +1623,14 @@ video {
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
 
-.focus\:ring-indigo-500:focus{
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(99 102 241 / var(--tw-ring-opacity));
-}
-
 .focus\:ring-blue-500:focus{
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(59 130 246 / var(--tw-ring-opacity));
+}
+
+.focus\:ring-indigo-500:focus{
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(99 102 241 / var(--tw-ring-opacity));
 }
 
 .focus\:ring-offset-2:focus{
@@ -1809,6 +1652,11 @@ video {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
+  .sm\:text-3xl{
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }
+
   .sm\:text-4xl{
     font-size: 2.25rem;
     line-height: 2.5rem;
@@ -1817,11 +1665,6 @@ video {
   .sm\:text-sm{
     font-size: 0.875rem;
     line-height: 1.25rem;
-  }
-
-  .sm\:text-3xl{
-    font-size: 1.875rem;
-    line-height: 2.25rem;
   }
 }
 
