Update: Mobile resposive for services section

--- a/output.css
+++ b/output.css
@@ -584,14 +584,6 @@ video {
   inset: 0px;
 }
 
-.inset-1{
-  inset: 0.25rem;
-}
-
-.inset-2{
-  inset: 0.5rem;
-}
-
 .inset-y-0{
   top: 0px;
   bottom: 0px;
@@ -715,10 +707,6 @@ video {
   display: block;
 }
 
-.inline{
-  display: inline;
-}
-
 .flex{
   display: flex;
 }
@@ -771,16 +759,16 @@ video {
   height: 100%;
 }
 
-.h-auto{
-  height: auto;
-}
-
 .max-h-12{
   max-height: 3rem;
 }
 
 .max-h-20{
   max-height: 5rem;
+}
+
+.max-h-28{
+  max-height: 7rem;
 }
 
 .max-h-32{
@@ -802,10 +790,6 @@ video {
 .max-h-fit{
   max-height: -moz-fit-content;
   max-height: fit-content;
-}
-
-.max-h-28{
-  max-height: 7rem;
 }
 
 .min-h-40{
@@ -840,6 +824,10 @@ video {
   width: 15rem;
 }
 
+.w-auto{
+  width: auto;
+}
+
 .w-fit{
   width: -moz-fit-content;
   width: fit-content;
@@ -847,10 +835,6 @@ video {
 
 .w-full{
   width: 100%;
-}
-
-.w-auto{
-  width: auto;
 }
 
 .min-w-28{
@@ -920,12 +904,12 @@ video {
   grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 
-.grid-cols-3{
-  grid-template-columns: repeat(3, minmax(0, 1fr));
+.grid-cols-2{
+  grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
-.grid-rows-2{
-  grid-template-rows: repeat(2, minmax(0, 1fr));
+.grid-rows-3{
+  grid-template-rows: repeat(3, minmax(0, 1fr));
 }
 
 .flex-row{
@@ -1115,11 +1099,6 @@ video {
   background-color: rgb(209 213 219 / var(--tw-bg-opacity));
 }
 
-.bg-gray-400{
-  --tw-bg-opacity: 1;
-  background-color: rgb(156 163 175 / var(--tw-bg-opacity));
-}
-
 .bg-gray-800{
   --tw-bg-opacity: 1;
   background-color: rgb(31 41 55 / var(--tw-bg-opacity));
@@ -1222,11 +1201,6 @@ video {
   padding-right: 2.5rem;
 }
 
-.px-16{
-  padding-left: 4rem;
-  padding-right: 4rem;
-}
-
 .px-3{
   padding-left: 0.75rem;
   padding-right: 0.75rem;
@@ -1317,10 +1291,6 @@ video {
 
 .pt-5{
   padding-top: 1.25rem;
-}
-
-.text-left{
-  text-align: left;
 }
 
 .text-center{
@@ -1613,18 +1583,6 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.hover\:scale-110:hover{
-  --tw-scale-x: 1.1;
-  --tw-scale-y: 1.1;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.hover\:scale-125:hover{
-  --tw-scale-x: 1.25;
-  --tw-scale-y: 1.25;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
 .hover\:border-gray-400:hover{
   --tw-border-opacity: 1;
   border-color: rgb(156 163 175 / var(--tw-border-opacity));
@@ -1757,11 +1715,6 @@ video {
     padding-right: 2rem;
   }
 
-  .sm\:px-10{
-    padding-left: 2.5rem;
-    padding-right: 2.5rem;
-  }
-
   .sm\:text-3xl{
     font-size: 1.875rem;
     line-height: 2.25rem;
@@ -1843,10 +1796,6 @@ video {
     width: 75%;
   }
 
-  .lg\:min-w-\[400px\]{
-    min-width: 400px;
-  }
-
   .lg\:max-w-\[536px\]{
     max-width: 536px;
   }
@@ -1855,8 +1804,16 @@ video {
     max-width: 540px;
   }
 
+  .lg\:grid-cols-3{
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
   .lg\:grid-cols-4{
     grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+
+  .lg\:grid-rows-2{
+    grid-template-rows: repeat(2, minmax(0, 1fr));
   }
 
   .lg\:flex-row{
@@ -1875,24 +1832,12 @@ video {
     gap: 2.75rem;
   }
 
-  .lg\:p-2{
-    padding: 0.5rem;
-  }
-
-  .lg\:p-2\.5{
-    padding: 0.625rem;
+  .lg\:p-3{
+    padding: 0.75rem;
   }
 
   .lg\:p-8{
     padding: 2rem;
-  }
-
-  .lg\:p-4{
-    padding: 1rem;
-  }
-
-  .lg\:p-3{
-    padding: 0.75rem;
   }
 
   .lg\:px-0{
@@ -1937,6 +1882,15 @@ video {
     font-size: 3rem;
     line-height: 1;
   }
+
+  .lg\:text-lg{
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+
+  .lg\:font-medium{
+    font-weight: 500;
+  }
 }
 
 @media (min-width: 1280px){
@@ -1947,10 +1901,5 @@ video {
   .xl\:px-0{
     padding-left: 0px;
     padding-right: 0px;
-  }
-
-  .xl\:px-8{
-    padding-left: 2rem;
-    padding-right: 2rem;
   }
 }
