--- a/output.css
+++ b/output.css
@@ -560,6 +560,40 @@ video {
   --tw-contain-style:  ;
 }
 
+.container{
+  width: 100%;
+}
+
+@media (min-width: 640px){
+  .container{
+    max-width: 640px;
+  }
+}
+
+@media (min-width: 768px){
+  .container{
+    max-width: 768px;
+  }
+}
+
+@media (min-width: 1024px){
+  .container{
+    max-width: 1024px;
+  }
+}
+
+@media (min-width: 1280px){
+  .container{
+    max-width: 1280px;
+  }
+}
+
+@media (min-width: 1536px){
+  .container{
+    max-width: 1536px;
+  }
+}
+
 .pointer-events-none{
   pointer-events: none;
 }
@@ -644,24 +678,9 @@ video {
   margin-bottom: 0.5rem;
 }
 
-.mx-auto{
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.my-2{
-  margin-top: 0.5rem;
-  margin-bottom: 0.5rem;
-}
-
-.mx-auto{
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.my-2{
-  margin-top: 0.5rem;
-  margin-bottom: 0.5rem;
+.my-3{
+  margin-top: 0.75rem;
+  margin-bottom: 0.75rem;
 }
 
 .my-6{
@@ -718,6 +737,10 @@ video {
   margin-top: 2rem;
 }
 
+.mb-2{
+  margin-bottom: 0.5rem;
+}
+
 .block{
   display: block;
 }
@@ -752,10 +775,6 @@ video {
 
 .h-28{
   height: 7rem;
-}
-
-.h-6{
-  height: 1.5rem;
 }
 
 .h-6{
@@ -810,10 +829,6 @@ video {
   max-height: 24rem;
 }
 
-.max-h-96{
-  max-height: 24rem;
-}
-
 .max-h-fit{
   max-height: -moz-fit-content;
   max-height: fit-content;
@@ -847,36 +862,8 @@ video {
   width: 1.5rem;
 }
 
-.w-40{
-  width: 10rem;
-}
-
-.w-6{
-  width: 1.5rem;
-}
-
-.w-40{
-  width: 10rem;
-}
-
-.w-6{
-  width: 1.5rem;
-}
-
 .w-60{
   width: 15rem;
-}
-
-.w-\[400px\]{
-  width: 400px;
-}
-
-.w-\[90px\]{
-  width: 90px;
-}
-
-.w-auto{
-  width: auto;
 }
 
 .w-\[400px\]{
@@ -898,7 +885,6 @@ video {
 
 .w-full{
   width: 100%;
-}
 }
 
 .min-w-28{
@@ -946,21 +932,18 @@ video {
   max-width: 32rem;
 }
 
-.max-w-fit{
-  max-width: -moz-fit-content;
-  max-width: fit-content;
-}
-
-.max-w-lg{
-  max-width: 32rem;
-}
-
 .flex-1{
   flex: 1 1 0%;
 }
 
 .grow{
   flex-grow: 1;
+}
+
+.border-spacing-16{
+  --tw-border-spacing-x: 4rem;
+  --tw-border-spacing-y: 4rem;
+  border-spacing: var(--tw-border-spacing-x) var(--tw-border-spacing-y);
 }
 
 .transform{
@@ -1039,10 +1022,6 @@ video {
 
 .gap-2{
   gap: 0.5rem;
-}
-
-.gap-2\.5{
-  gap: 0.625rem;
 }
 
 .gap-2\.5{
@@ -1130,6 +1109,26 @@ video {
   border-width: 2px;
 }
 
+.border-r{
+  border-right-width: 1px;
+}
+
+.border-r-2{
+  border-right-width: 2px;
+}
+
+.border-s{
+  border-inline-start-width: 1px;
+}
+
+.border-b{
+  border-bottom-width: 1px;
+}
+
+.border-b-2{
+  border-bottom-width: 2px;
+}
+
 .border-solid{
   border-style: solid;
 }
@@ -1153,6 +1152,16 @@ video {
   border-color: transparent;
 }
 
+.border-slate-300{
+  --tw-border-opacity: 1;
+  border-color: rgb(203 213 225 / var(--tw-border-opacity));
+}
+
+.border-blue-500{
+  --tw-border-opacity: 1;
+  border-color: rgb(59 130 246 / var(--tw-border-opacity));
+}
+
 .bg-black{
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
@@ -1166,11 +1175,6 @@ video {
 .bg-blue-600{
   --tw-bg-opacity: 1;
   background-color: rgb(37 99 235 / var(--tw-bg-opacity));
-}
-
-.bg-blue_light{
-  --tw-bg-opacity: 1;
-  background-color: rgb(209 246 255 / var(--tw-bg-opacity));
 }
 
 .bg-card_bg{
@@ -1282,10 +1286,6 @@ video {
   padding: 1rem;
 }
 
-.p-4{
-  padding: 1rem;
-}
-
 .p-5{
   padding: 1.25rem;
 }
@@ -1298,18 +1298,9 @@ video {
   padding: 2rem;
 }
 
-.p-10{
-  padding: 2.5rem;
-}
-
 .px-10{
   padding-left: 2.5rem;
   padding-right: 2.5rem;
-}
-
-.px-16{
-  padding-left: 4rem;
-  padding-right: 4rem;
 }
 
 .px-3{
@@ -1332,9 +1323,9 @@ video {
   padding-right: 1.5rem;
 }
 
-.py-1{
-  padding-top: 0.25rem;
-  padding-bottom: 0.25rem;
+.px-8{
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
 
 .py-1{
@@ -1355,16 +1346,6 @@ video {
 .py-4{
   padding-top: 1rem;
   padding-bottom: 1rem;
-}
-
-.py-3{
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
-}
-
-.px-8{
-  padding-left: 2rem;
-  padding-right: 2rem;
 }
 
 .pb-0{
@@ -1562,6 +1543,11 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.text-blue-500{
+  --tw-text-opacity: 1;
+  color: rgb(59 130 246 / var(--tw-text-opacity));
+}
+
 .underline{
   text-decoration-line: underline;
 }
@@ -1581,6 +1567,12 @@ video {
 .shadow-sm{
   --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
   --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow{
+  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -1747,14 +1739,6 @@ video {
   --tw-bg-opacity: 0.5;
 }
 
-.hover\:font-bold:hover{
-  font-weight: 700;
-}
-
-.hover\:font-medium:hover{
-  font-weight: 500;
-}
-
 .hover\:text-blue-700:hover{
   --tw-text-opacity: 1;
   color: rgb(29 78 216 / var(--tw-text-opacity));
@@ -1785,24 +1769,21 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.hover\:text-blue-500:hover{
+  --tw-text-opacity: 1;
+  color: rgb(59 130 246 / var(--tw-text-opacity));
+}
+
 .hover\:underline:hover{
   text-decoration-line: underline;
-}
-
-.hover\:opacity-90:hover{
-  opacity: 0.9;
-}
-
-.hover\:opacity-95:hover{
-  opacity: 0.95;
 }
 
 .hover\:opacity-85:hover{
   opacity: 0.85;
 }
 
-.hover\:opacity-75:hover{
-  opacity: 0.75;
+.hover\:opacity-90:hover{
+  opacity: 0.9;
 }
 
 .hover\:shadow-xl:hover{
@@ -1951,24 +1932,16 @@ video {
     width: 66.666667%;
   }
 
+  .lg\:w-2\/5{
+    width: 40%;
+  }
+
   .lg\:w-3\/4{
     width: 75%;
   }
 
   .lg\:w-\[600px\]{
     width: 600px;
-  }
-
-  .lg\:w-2\/6{
-    width: 33.333333%;
-  }
-
-  .lg\:w-1\/3{
-    width: 33.333333%;
-  }
-
-  .lg\:w-2\/5{
-    width: 40%;
   }
 
   .lg\:max-w-\[536px\]{
@@ -2019,14 +1992,6 @@ video {
     padding: 2rem;
   }
 
-  .lg\:p-8{
-    padding: 2rem;
-  }
-
-  .lg\:p-8{
-    padding: 2rem;
-  }
-
   .lg\:px-0{
     padding-left: 0px;
     padding-right: 0px;
@@ -2035,11 +2000,6 @@ video {
   .lg\:px-10{
     padding-left: 2.5rem;
     padding-right: 2.5rem;
-  }
-
-  .lg\:px-12{
-    padding-left: 3rem;
-    padding-right: 3rem;
   }
 
   .lg\:px-12{
